--- a/shows.html
+++ b/shows.html
@@ -20,14 +20,13 @@
         <!-- list item -->
         <div class="list">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/alice%20in%20borderland.jpg?raw=true">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
+                    <div class="title">2020</div>
+                    <div class="topic">Alice in Borderland</div>
                     <div class="des">
                         <!-- lorem 50 -->
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Obsessed gamer Arisu suddenly finds himself in a strange, emptied-out version of Tokyo in which he and his friends must compete in dangerous games in order to survive.
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -36,13 +35,12 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie.jpg?raw=true">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
+                    <div class="title">2023</div>
+                    <div class="topic">Barbie</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        Barbie and Ken are having the time of their lives in the colorful and seemingly perfect world of Barbie Land. However, when they get a chance to go to the real world, they soon discover the joys and perils of living among humans
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -51,13 +49,12 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/bettercallsaul.jpg?raw=true">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
+                    <div class="title">2015</div>
+                    <div class="topic">Better Call Saul</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        He wasn't always Saul Goodman, ace attorney for chemist-turned-meth dealer Walter White. Six years before he begins to represent Albuquerque's most notorious criminal, Goodman is Jimmy McGill, a small-time attorney hustling to make a name for himself. He's a forceful champion for his low-income clients, an underdog whose morals and ambitions often clash. Jimmy works with private eye Mike Ehrmantraut, a former Philadelphia cop and recent transplant to the Southwest. Mike has a specialized skill set -- he's a "fixer" of sticky situations -- that Jimmy soon learns to appreciate.
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -66,13 +63,12 @@
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/blackmirror.jpg?raw=true">
                 <div class="content">
-                    <div class="author">LUNDEV</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
+                    <div class="title">2011</div>
+                    <div class="topic">Black Mirror</div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                        A series of stand-alone dramas -- sharp, suspenseful, satirical tales that explore techno-paranoia -- "Black Mirror" is a contemporary reworking of "The Twilight Zone" with stories that tap into the collective unease about the modern world, particularly regarding both intended and unintended consequences of new technologies and the effect they have on society and individuals.
                     </div>
                     <div class="buttons">
                         <button>SEE MORE</button>
@@ -84,46 +80,46 @@
         <!-- list thumnail -->
         <div class="thumbnail">
             <div class="item">
-                <img src="image/img1.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/alice%20in%20borderland.jpg?raw=true">
                 <div class="content">
                     <div class="title">
-                        Name Slider
+                        Alice in Borderland
                     </div>
                     <div class="description">
-                        Description
+                        Series
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="image/img2.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie.jpg?raw=true">
                 <div class="content">
                     <div class="title">
-                        Name Slider
+                        Barbie
                     </div>
                     <div class="description">
-                        Description
+                        Movie
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="image/img3.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/bettercallsaul.jpg?raw=true">
                 <div class="content">
                     <div class="title">
-                        Name Slider
+                        Better Call Saul
                     </div>
                     <div class="description">
-                        Description
+                        Series
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="image/img4.jpg">
+                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/blackmirror.jpg?raw=true">
                 <div class="content">
                     <div class="title">
-                        Name Slider
+                        Black Mirror
                     </div>
                     <div class="description">
-                        Description
+                        Series
                     </div>
                 </div>
             </div>
