--- a/shows.html
+++ b/shows.html
@@ -21,8 +21,6 @@
                     <div class="title">2020</div>
                     <div class="name">Alice in Borderland</div>
                     <div class="des">Obsessed gamer Arisu suddenly finds himself in a strange, emptied-out version of Tokyo in which he and his friends must compete in dangerous games in order to survive.</div>
-                    <div class="btn">
-                    </div>
                 </div>
             </div>
 
@@ -31,8 +29,6 @@
                     <div class="title">2023</div>
                     <div class="name">Barbie</div>
                     <div class="des">Barbie and Ken are having the time of their lives in the colorful and seemingly perfect world of Barbie Land. However, when they get a chance to go to the real world, they soon discover the joys and perils of living among humans.</div>
-                    <div class="btn">
-                    </div>
                 </div>
 
             </div>
@@ -43,8 +39,6 @@
                     <div class="title">2015</div>
                     <div class="name">Better Call Saul</div>
                     <div class="des">He wasn't always Saul Goodman, ace attorney for chemist-turned-meth dealer Walter White. Six years before he begins to represent Albuquerque's most notorious criminal, Goodman is Jimmy McGill, a small-time attorney hustling to make a name for himself. He's a forceful champion for his low-income clients, an underdog whose morals and ambitions often clash. Jimmy works with private eye Mike Ehrmantraut, a former Philadelphia cop and recent transplant to the Southwest. Mike has a specialized skill set -- he's a "fixer" of sticky situations -- that Jimmy soon learns to appreciate.</div>
-                    <div class="btn">
-                    </div>
                 </div>
 
             </div>
@@ -55,8 +49,6 @@
                     <div class="title">2011</div>
                     <div class="name">Black Mirror</div>
                     <div class="des">A series of stand-alone dramas -- sharp, suspenseful, satirical tales that explore techno-paranoia -- "Black Mirror" is a contemporary reworking of "The Twilight Zone" with stories that tap into the collective unease about the modern world, particularly regarding both intended and unintended consequences of new technologies and the effect they have on society and individuals.</div>
-                    <div class="btn">
-                    </div>
                 </div>
 
             </div>
@@ -67,11 +59,29 @@
                     <div class="title">2008</div>
                     <div class="name">Breaking Bad</div>
                     <div class="des">Mild-mannered high school chemistry teacher Walter White thinks his life can't get much worse. His salary barely makes ends meet, a situation not likely to improve once his pregnant wife gives birth, and their teenage son is battling cerebral palsy. But Walter is dumbstruck when he learns he has terminal cancer. Realizing that his illness probably will ruin his family financially, Walter makes a desperate bid to earn as much money as he can in the time he has left by turning an old RV into a meth lab on wheels.</div>
-                    <div class="btn">
-                    </div>
                 </div>
 
             </div>
+
+
+ <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dune.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2021</div>
+                    <div class="name">Dune</div>
+                    <div class="des">Paul Atreides, a brilliant and gifted young man born into a great destiny beyond his understanding, must travel to a dangerous planet in the universe to ensure the future of his family and his people. As malevolent forces explode into conflict over the planet's exclusive supply of a precious resource in existence, only those who can conquer their own fear will survive.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dune2.jpeg?raw=true);">
+                <div class="content">
+                    <div class="title">2024</div>
+                    <div class="name">Dune: Part Two</div>
+                    <div class="des">Paul Atreides unites with Chani and the Fremen while seeking revenge against the conspirators who destroyed his family. Facing a choice between the love of his life and the fate of the universe, he must prevent a terrible future only he can foresee.</div>
+                </div>
+            </div>
+
+
+            
         </div>
 
         <!--next prev button-->
