--- a/shows.html
+++ b/shows.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie.jpeg?raw=true);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie.jpg?raw=true);">
                 <div class="content">
                     <div class="title">2023</div>
                     <div class="name">Barbie</div>
@@ -38,12 +38,12 @@
                 <div class="content">
                     <div class="title">2015</div>
                     <div class="name">Better Call Saul</div>
-                    <div class="des">He wasn't always Saul Goodman, ace attorney for chemist-turned-meth dealer Walter White. Six years before he begins to represent Albuquerque's most notorious criminal, Goodman is Jimmy McGill, a small-time attorney hustling to make a name for himself. He's a forceful champion for his low-income clients, an underdog whose morals and ambitions often clash. Jimmy works with private eye Mike Ehrmantraut, a former Philadelphia cop and recent transplant to the Southwest. Mike has a specialized skill set -- he's a "fixer" of sticky situations -- that Jimmy soon learns to appreciate.</div>
+                    <div class="des">Better Call Saul examines the ethical decline of Jimmy McGill (Bob Odenkirk), an aspiring lawyer and former con artist who becomes the egocentric criminal-defense attorney Saul Goodman</div>
                 </div>
 
             </div>
 
-            <div class="item" style="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/blackmirror.jpg?raw=true);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/blackmirror.jpg?raw=true);">
                 
                 <div class="content">
                     <div class="title">2011</div>
@@ -58,7 +58,7 @@
                 <div class="content">
                     <div class="title">2008</div>
                     <div class="name">Breaking Bad</div>
-                    <div class="des">Mild-mannered high school chemistry teacher Walter White thinks his life can't get much worse. His salary barely makes ends meet, a situation not likely to improve once his pregnant wife gives birth, and their teenage son is battling cerebral palsy. But Walter is dumbstruck when he learns he has terminal cancer. Realizing that his illness probably will ruin his family financially, Walter makes a desperate bid to earn as much money as he can in the time he has left by turning an old RV into a meth lab on wheels.</div>
+                    <div class="des">a high school chemistry teacher who turns to cooking meth after being diagnosed with terminal lung cancer.</div>
                 </div>
 
             </div>
@@ -77,6 +77,38 @@
                     <div class="title">2024</div>
                     <div class="name">Dune: Part Two</div>
                     <div class="des">Paul Atreides unites with Chani and the Fremen while seeking revenge against the conspirators who destroyed his family. Facing a choice between the love of his life and the fate of the universe, he must prevent a terrible future only he can foresee.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/everythingeverywhereallatonce.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2022</div>
+                    <div class="name">Everything Everywhere All at Once</div>
+                    <div class="des">When an interdimensional rupture unravels reality, an unlikely hero must channel her newfound powers to fight bizarre and bewildering dangers from the multiverse as the fate of the world hangs in the balance.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/frieren.jpeg?raw=true);">
+                <div class="content">
+                    <div class="title">2023</div>
+                    <div class="name">Frieren: Beyond Journey's End</div>
+                    <div class="des">An elf and her friends defeat a demon king in a great war; but the war is over, and the elf must search for a new way of life.</div>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/game%20of%20throne.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2011</div>
+                    <div class="name">Game of Thrones</div>
+                    <div class="des">The depiction of two powerful families -- kings and queens, knights and renegades, liars and honest men -- playing a deadly game for control of the Seven Kingdoms of Westeros, and to sit atop the Iron Throne.</div>
+                </div>
+            </div>
+
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/hidden%20figures.jpeg?raw=true);">
+                <div class="content">
+                    <div class="title">2017</div>
+                    <div class="name">Hidden Figures</div>
+                    <div class="des">Three brilliant African-American women at NASA -- Katherine Johnson, Dorothy Vaughan and Mary Jackson -- serve as the brains behind one of the greatest operations in history: the launch of astronaut John Glenn into orbit, a stunning achievement that restored the nation's confidence, turned around the Space Race and galvanized the world.</div>
                 </div>
             </div>
 
