--- a/shows.html
+++ b/shows.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie.jpg?raw=true);">
+            <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/barbie3.jpg?raw=true);">
                 <div class="content">
                     <div class="title">2023</div>
                     <div class="name">Barbie</div>
@@ -38,7 +38,7 @@
                 <div class="content">
                     <div class="title">2015</div>
                     <div class="name">Better Call Saul</div>
-                    <div class="des">Better Call Saul examines the ethical decline of Jimmy McGill (Bob Odenkirk), an aspiring lawyer and former con artist who becomes the egocentric criminal-defense attorney Saul Goodman</div>
+                    <div class="des">Better Call Saul examines the ethical decline of Jimmy McGill (Bob Odenkirk), an aspiring lawyer and former con artist who becomes the egocentric criminal-defense attorney Saul Goodman.</div>
                 </div>
 
             </div>
@@ -58,7 +58,7 @@
                 <div class="content">
                     <div class="title">2008</div>
                     <div class="name">Breaking Bad</div>
-                    <div class="des">a high school chemistry teacher who turns to cooking meth after being diagnosed with terminal lung cancer.</div>
+                    <div class="des">A high school chemistry teacher who turns to cooking meth after being diagnosed with terminal lung cancer.</div>
                 </div>
 
             </div>
