--- a/shows.html
+++ b/shows.html
@@ -63,6 +63,14 @@
 
             </div>
 
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/crazyrichasians.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2018</div>
+                    <div class="name">Crazy Rich Asians</div>
+                    <div class="des">Rachel Chu is happy to accompany her longtime boyfriend, Nick, to his best friend's wedding in Singapore. She's also surprised to learn that Nick's family is extremely wealthy and he's considered one of the country's most eligible bachelors. Thrust into the spotlight, Rachel must now contend with jealous socialites, quirky relatives and something far, far worse -- Nick's disapproving mother.</div>
+                </div>
+            </div>
+
 
  <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/dune.jpg?raw=true);">
                 <div class="content">
@@ -109,6 +117,46 @@
                     <div class="title">2017</div>
                     <div class="name">Hidden Figures</div>
                     <div class="des">Three brilliant African-American women at NASA -- Katherine Johnson, Dorothy Vaughan and Mary Jackson -- serve as the brains behind one of the greatest operations in history: the launch of astronaut John Glenn into orbit, a stunning achievement that restored the nation's confidence, turned around the Space Race and galvanized the world.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/hunter%20x%20hunter.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2011</div>
+                    <div class="name">Hunter x Hunter</div>
+                    <div class="des">Gon Freecs works hard to become a hunter while searching for the father he doesn't remember.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/interstellar.png?raw=true);">
+                <div class="content">
+                    <div class="title">2014</div>
+                    <div class="name">Interstellar</div>
+                    <div class="des">In Earth's future, a global crop blight and second Dust Bowl are slowly rendering the planet uninhabitable. Professor Brand (Michael Caine), a brilliant NASA physicist, is working on plans to save mankind by transporting Earth's population to a new home via a wormhole. But first, Brand must send former NASA pilot Cooper (Matthew McConaughey) and a team of researchers through the wormhole and across the galaxy to find out which of three planets could be mankind's new home.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/killersoftheflowermoon.png?raw=true);">
+                <div class="content">
+                    <div class="title">2023</div>
+                    <div class="name">Killers of the Flower Moon</div>
+                    <div class="des">Real love crosses paths with unspeakable betrayal as Mollie Burkhart, a member of the Osage Nation, tries to save her community from a spree of murders fueled by oil and greed.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/kingdom.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2019</div>
+                    <div class="name">Kingdom</div>
+                    <div class="des">The deceased king rises and a mysterious plague begins to spread; the prince must face a new breed of enemies to unveil the evil scheme and save his people.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/midsommar.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2019</div>
+                    <div class="name">Midsommar</div>
+                    <div class="des">A couple travel to Sweden to visit their friend's rural hometown for its fabled midsummer festival, but what begins as an idyllic retreat quickly devolves into an increasingly violent and bizarre competition at the hands of a pagan cult.</div>
                 </div>
             </div>
 
