--- a/shows.html
+++ b/shows.html
@@ -63,11 +63,11 @@
 
             </div>
 
-             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/crazyrichasians.jpg?raw=true);">
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/crazyrichasians1.png?raw=true);">
                 <div class="content">
                     <div class="title">2018</div>
                     <div class="name">Crazy Rich Asians</div>
-                    <div class="des">Rachel Chu is happy to accompany her longtime boyfriend, Nick, to his best friend's wedding in Singapore. She's also surprised to learn that Nick's family is extremely wealthy and he's considered one of the country's most eligible bachelors. Thrust into the spotlight, Rachel must now contend with jealous socialites, quirky relatives and something far, far worse -- Nick's disapproving mother.</div>
+                    <div class="des">Chinese-American New Yorker Rachel Chu travels to Singapore with her boyfriend Nick Young to attend his best friend's wedding and discovers that he comes from one of Asia's most wealthy, prominent families.</div>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
                 </div>
             </div>
 
-              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/hunter%20x%20hunter.jpg?raw=true);">
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/hunterxhunter1.png?raw=true);">
                 <div class="content">
                     <div class="title">2011</div>
                     <div class="name">Hunter x Hunter</div>
@@ -152,13 +152,54 @@
                 </div>
             </div>
 
-              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/midsommar.jpg?raw=true);">
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/midsommar1.png?raw=true);">
                 <div class="content">
                     <div class="title">2019</div>
                     <div class="name">Midsommar</div>
                     <div class="des">A couple travel to Sweden to visit their friend's rural hometown for its fabled midsummer festival, but what begins as an idyllic retreat quickly devolves into an increasingly violent and bizarre competition at the hands of a pagan cult.</div>
                 </div>
             </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/moana.png?raw=true);">
+                <div class="content">
+                    <div class="title">2016</div>
+                    <div class="name">Moana</div>
+                    <div class="des">In ancient Polynesia, when a terrible curse incurred by the demigod Maui reaches Moana's island, she answers the Ocean's call to seek out Maui to set things right. Moana is a daughter of the chief of her tribe. Coming from a long line of navigators she sets off for a fabled island with the demigod Maui.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/oppenheimer.jpeg?raw=true);">
+                <div class="content">
+                    <div class="title">2023</div>
+                    <div class="name">Oppenheimer</div>
+                    <div class="des">During World War II, Lt. Gen. Leslie Groves Jr. appoints physicist J. Robert Oppenheimer to work on the top-secret Manhattan Project. Oppenheimer and a team of scientists spend years developing and designing the atomic bomb. Their work comes to fruition on July 16, 1945, as they witness the world's first nuclear explosion, forever changing the course of history.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/pokemon%20arceus.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2009</div>
+                    <div class="name">Pokémon: Arceus and the Jewel of Life</div>
+                    <div class="des">Many thousands of years ago, legendary Alpha Pokemon Arceus came to Earth to retrieve the Jewel of Life, which it had lent to a man called Damos - but Damos betrayed it, attacking Arceus with a large army of Pokemon. Arceus retaliated, and then, thinking it had killed Damos, went to sleep, but recently it has awoken and returned to Earth to find the Jewel of Life.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/pokemon%20giratina.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2008</div>
+                    <div class="name">Pokémon: Giratina & the Sky Warrior</div>
+                    <div class="des">When scientist Newton Graceland discovers a parallel universe known as the Reverse World, inhabited solely by the Pokémon called Giratina, he plans to harness its power. Although Graceland abandons that idea, his evil assistant Zero secretly plots to capture the Reverse World for himself. In order to stop him, Graceland enlists Pokémon trainers Ash, Dawn, and Brock to help Giratina stave off the treacherous Zero.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/pokemon%20darkrai.png?raw=true);">
+                <div class="content">
+                    <div class="title">2007</div>
+                    <div class="name">Pokémon: The Rise of Darkra</div>
+                    <div class="des">Between them, the Pokémon Palkia and Dialga can warp both space and time. Their epic inter-dimensional battle spills into the bucolic village of Alamos Town just as youngsters Ash (Kunihiko Yuyama), Brock (Hideki Sonoda) and Dawn (Choji Yoshikawa) arrive in town for a Pokémon contest.</div>
+                </div>
+            </div>
+
 
 
             
